# Fractal-Project

./: CMakeLists.txt  README.md  lines.py  todo.txt  triangle.py
configs/systems/: basic_leaf.ini  cloud_lines.ini  current.ini  from_lines.ini  good_leaf.ini  good_snowflake.ini  template.ini
configs/transforms/chaos_attractors/: barnsley_fern.txt
configs/transforms/cloud/: strange_square.txt  weird_triangle.txt
configs/transforms/leaf/: blunt_spiral.txt  demon_leaf.txt  first_detail.txt  good_leaf.txt  maple_leaf.txt
configs/transforms/snowflake/: decent_snowflake.txt  decent_snowflake2.txt  good_snowflake.txt
configs/vertex_coords/: good_lines.txt  good_triangles.txt  lines.txt  triangles.txt
include/: Benchmark.h  Canvas.h  Frame.h  IOFunc.h  Shapes.h  Support.h
lib/: CMakeLists.txt  Canvas.cpp  Frame.cpp  IOFunc.cpp  Shapes.cpp
lib/bmplib/: EasyBMP.cpp
src/: CMakeLists.txt  main_collage.cpp  main_fern.cpp  main_fractal.cpp
src/chaos/: ChaosFractal.cpp  ChaosFractal.h  ChaosShapes.cpp  ChaosShapes.h
src/collage/: Collage.cpp  Collage.h  ConfigParse.cpp  ConfigParse.h  VTio.cpp  VTio.h
src/transform/: AffineTransform.cpp  AffineTransform.h  IFSio.cpp  IFSio.h  IFSystem.cpp  IFSystem.h
